--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
             "Sparav\\ApplicationInsights\\": "src/"
         }
     },
-    "version": "1.0.3",
+    "version": "1.0.4",
     "name": "sparav/applicationinsights",
-    "description": "Sparav Customer Api",
+    "description": "Sparav ApplicationInsights Api",
     "type": "MIT",
     "license": "MIT",
     "minimum-stability": "stable"
